<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20"
        tools:context=".framework.presentation.detail.TransactionDetailFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/transaction_date"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text=""
            android:hint="@string/select_a_value"
            android:textColorHint="@android:color/holo_red_light"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/transaction_time"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text=""
            android:hint="@string/select_a_value"
            android:textColorHint="@android:color/holo_red_light"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/transaction_category"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text=""
            android:hint="@string/select_a_value"
            android:textColorHint="@android:color/holo_red_light"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/usd"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tv_valueUSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:hint="@string/input_usd_value"
            android:textColorHint="@android:color/holo_red_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/usd_nzd_rate"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:hint="@string/loading"
            android:textColorHint="@android:color/holo_red_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/nzd"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tv_valueNZD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:hint="@string/input_nzd_value"
            android:textColorHint="@android:color/holo_red_light"/>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"/>
    </LinearLayout>
</ScrollView>